--- a/resources/views/comments.html
+++ b/resources/views/comments.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>XD</title>
+    <title>Laravel</title>
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
@@ -32,6 +32,10 @@
             color: white !important;
         }
 
+        .nav-item > a {
+            color: white !important;
+        }
+
         #title {
             margin: 40px auto 65px auto;
             text-align: center;
@@ -50,40 +54,31 @@
             color: var(--dark-purple);
         }
 
-        .card > img {
-            width: 100%;
-            height: 20vw;
-            object-fit: cover;
+        .fa-right-from-bracket {
+            color: white;
+            font-size: 22px;
         }
 
-        .div-info {
-            display: flex;
-            justify-content: space-between;
+        .card {
+          width: 70%;
+          margin-left: auto;
+          margin-right: auto;
+          margin-bottom: 20px;
+          padding: 10px;
         }
 
-        .div-info > p {
-            display: inline-flex;
+        .btn {
+          background-color: var(--dark-purple);
+          color: white;
+          width: 100%;
         }
 
-        .div-info > p > i {
-            line-height: 1.4 !important;
+        .btn:hover {
+          color: white;
         }
 
-        .fa-location-dot {
-            color: #b133ff;
-        }
-
-        .fa-star {
-            color: #ffb833;
-        }
-
-        div > h5 {
-            text-align: center;
-            font-weight: bold;
-        }
-
-        .card-body {
-            text-align: justify;
+        .btn-delete {
+          background-color: #801f2d;
         }
 
     </style>
@@ -98,59 +93,49 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link" href="#">Utilisateurs</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
+                    <a class="nav-link" href="#">Catégories de sorts</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    <a class="nav-link" href="#">Commentaires</a>
                 </li>
             </ul>
-            <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+            <a href="#"><i class="fa-solid fa-right-from-bracket"></i></a>
         </div>
     </div>
 </nav>
+
 <div id="title">
     <h1>
-        <i class="fa-solid fa-wand-sparkles"></i>&nbsp; Trouvez le profil qui correspond à vos besoins &nbsp;<i class="fa-solid fa-wand-sparkles"></i>
+        <i class="fa-solid fa-wand-sparkles"></i>&nbsp; Liste des commentaires &nbsp;<i class="fa-solid fa-wand-sparkles"></i>
     </h1>
     <hr>
 </div>
 
-<div id="content" class="container">
-    <div class="row row-cols-1 row-cols-md-4 g-4">
-      @foreach($marabouts as $marabout)
-      <div class="col">
-        <div class="card">
-          <img src="img/test.jpeg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">{{ $marabout->name }}</h5>
-            <div class="div-info">
-                <p><i class="fa-solid fa-location-dot"></i>&nbsp;{{ $marabout->address }}</p>
-                <p>10/10&nbsp;<i class="fa-solid fa-star"></i></p>
-            </div>
-            <p class="card-text">{{ $marabout->resume }}</p>
-          </div>
-        </div>
-      </div>
-      @endforeach
-  
-</div>
+<div class="card">
+  <p>Attribué à Supersorcierdu93 le 10/10/2022</p>
+  <form action="">
+    <div class="mb-3">
+      <label class="form-label">Note /10</label>
+      <input type="number" class="form-control" min="0" max="10" value="8">
+    </div>
+    <div class="mb-3">
+      <label class="form-label">Commentaire</label>
+      <textarea class="form-control" rows="3">
+        Lorem ipsum dolor sit amet consectetur adipisicing, elit. Sunt ad quibusdam fugiat dolorem excepturi, mollitia tempore id corporis facere ab, provident! Sequi, ipsa libero autem et iste quae reprehenderit debitis?
+      </textarea>
+    </div>
+    <div class="mb-3">
+      <button class="btn">Modifier</button>
+    </div>
+  </form>
+  <form action="">
+    <div class="mb-3">
+      <button class="btn btn-delete">Supprimer</button>
+    </div>
+  </form>
 </div>
 
 </body>
